Criar os quadrados no HTML

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="estilo.css">
   </head>
   <body>
-
+    <div id="externa">
+      <div class="interna"></div>
+      <div class="interna"></div>
+      <div class="interna"></div>
+      <div class="interna"></div>
+    </div>
   </body>
 </html>
